# redaction-system

./: .coveragerc  .gitignore  flaky_unit_test.sh  makefile  pyproject.toml  readme.md
.github/: dependabot.yml
config/: default.yaml
infrastructure/: .tflint.hcl  a.json  budget-alerts.tf  data.tf  locals.tf  main.tf  network.tf  provider.tf  providers.tf  rbac.tf  terraform.tfvars  variables.tf
infrastructure/environments/: dev.tfvars  prod.tfvars  test.tfvars  training.tfvars
pipelines/: azure-pipelines-variables.yml  function-app-restart.yml  redaction-cd.yml  redaction-ci.yml  redaction-perf-test.yml  terraform-cd.yaml  terraform-cd.yml  terraform-ci-commit.yaml  terraform-ci.yml
pipelines/jobs/: job-run-tests.yml  job-validate-code.yml
pipelines/scripts/: deploy_openai_model.py  wait_for_function_app_to_be_running.py
pipelines/stages/: stage-run-tests.yml
pipelines/steps/: deploy_to_function_app.yaml  restart-function-app.yml
receiver/: function_app.py  requirements.txt
redactor/: .coveragerc  function_app.py  host.json  pyproject.toml  pytest.ini  requirements.txt
redactor/config/: default.yaml  prompt_v1.yaml  stopwords.yaml
redactor/core/: config.py  connectivity.py  estimation.py  exceptions.py  file_processor.py  image_redaction_test.py  llm_util.py  main.py  redaction_manager.py  redaction_mgr.py  redactor.py  result.py  text_util.py
redactor/core/config/: default.yaml  prompt_v1.yaml
redactor/core/io/: azure_blob_io.py  io_factory.py  storage_io.py
redactor/test/: conftest.py
scripts/: trigger_redaction.py
(+122 files in other folders)
