[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "redactor"
version = "0.0.1"
description = "Redaction System"
readme = "readme.md"
requires-python = ">=3.13"
dependencies = [
    "azure-ai-vision-imageanalysis",
    "azure-identity",
    "azure-monitor-opentelemetry",
    "azure-storage-blob",
    "langdetect",
    "langchain",
    "langchain-text-splitters",
    "openai",
    "pydantic>=2.0.0",
    "Pillow",
    "PyYAML",
    "python-magic-bin==0.4.14; platform_system == 'Windows'",
    "python-magic==0.4.27; platform_system != 'Windows'",
    "pypdf>=4.0.0",
    "tiktoken>=0.12.0",

]
classifiers = [
    "Programming Language :: Python :: 3.13",
]
license = "MIT"
license-files = ["LICENSE"]

[project.optional-dependencies]
dev = [
    "coverage",
    "mock",
    "myst-parser",
    "pre-commit",
    "pytest",
    "pytest-xdist",
    "pytest-cov",
    "ruff",
    "toml",
    "unidecode",
]

[tool.setuptools.packages.find]
where = ["redactor"]

# `coverage` configurations
[tool.coverage.run]
source = [
    "./"
]

[tool.coverage.report]
exclude_lines = [
    "if __name__ == .__main__.:"
]

# `isort` configurations
[tool.isort]
profile = "black"

# `bandit' configurations
[tool.bandit]
exclude_dirs = ["redactor/test"]
skips = []
    